# postgres-websockets

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.build  README.md  build-docker.sh  cabal.project  cabal.project.local  circle.yml  database-uri.txt  docker-compose.yml  docker.conf  download-ghcup.sh  postgres-websockets.cabal  postgrest-ws.cabal  publish-docker.sh  rails.conf  sample-env  sample.conf  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml  docker.yml  release.yml
app/: Config.hs  Main.hs
client-example/: client.html  client.js  index.html  screen.css
dist-newstyle/cache/: compiler  config
src/: APrelude.hs  PostgRESTWS.hs  PostgresWebsockets.hs
src/PostgRESTWS/: Broadcast.hs  Claims.hs  Database.hs  HasqlBroadcast.hs  Types.hs
src/PostgresWebsockets/: Broadcast.hs  Claims.hs  Config.hs  Context.hs  Database.hs  HasqlBroadcast.hs  Middleware.hs  ReplicantBroadcast.hs  Server.hs
static/: client.html  client.js  screen.css
test/: BroadcastSpec.hs  ClaimsSpec.hs  DatabaseSpec.hs  HasqlBroadcastSpec.hs  ServerSpec.hs
