name:                postgrest-ws
version:             0.1.0.1
synopsis:            PostgREST extension to map LISTEN/NOTIFY messages to Websockets
description:         Please see README.md
homepage:            https://github.com/diogob/postgrest-ws#readme
license:             BSD3
license-file:        LICENSE
author:              Diogo Biazus
maintainer:          diogo@biazus.me
copyright:           2016 Diogo Biazus
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     PostgRESTWS
  build-depends:       base >= 4.7 && < 5
                     , hasql-pool >= 0.4 && < 0.5
                     , text >= 1.2 && < 2
                     , wai >= 3.2 && < 4
                     , websockets >= 0.9 && < 0.10
                     , wai-websockets >= 3.0 && < 4
                     , postgrest >= 0.3 && < 0.4
                     , http-types >= 0.9
                     , bytestring >= 0.10
                     , postgresql-libpq
                     , time
                     , unordered-containers >= 0.2
                     , postgresql-libpq >= 0.9 && < 1.0
                     , aeson >= 0.11
                     , string-conversions >= 0.4
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

executable postgrest-ws
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.4 && < 0.5
                     , string-conversions >= 0.4 && < 0.5
                     , hasql >= 0.19 && < 0.20
                     , hasql-pool >= 0.4 && < 0.5
                     , warp >= 3.2 && < 4
                     , unix >= 2.7 && < 3
                     , jwt >= 0.7 && < 1
                     , postgrest
                     , postgrest-ws
                     , postgresql-libpq >= 0.9 && < 1.0
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

test-suite postgrest-ws-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , postgrest-ws
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/diogob/postgrest-ws
