name:                postgrest-ws
version:             0.4.2.0
synopsis:            PostgREST extension to map LISTEN/NOTIFY messages to Websockets
description:         Please see README.md
homepage:            https://github.com/diogob/postgrest-ws#readme
license:             BSD3
license-file:        LICENSE
author:              Diogo Biazus
maintainer:          diogo@biazus.me
copyright:           2016 Diogo Biazus
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     PostgRESTWS
                     , PostgRESTWS.Broadcast
                     , PostgRESTWS.Database
                     , PostgRESTWS.HasqlBroadcast
                     , PostgRESTWS.Claims
  build-depends:       base >= 4.7 && < 5
                     , hasql-pool >= 0.4 && < 0.5
                     , text >= 1.2 && < 2
                     , wai >= 3.2 && < 4
                     , websockets >= 0.9 && < 0.11
                     , wai-websockets >= 3.0 && < 4
                     , http-types >= 0.9
                     , bytestring >= 0.10
                     , postgresql-libpq
                     , lens
                     , lens-aeson
                     , jose >= 0.6
                     , unordered-containers >= 0.2
                     , postgresql-libpq >= 0.9 && < 1.0
                     , aeson >= 0.11
                     , protolude >= 0.2
                     , jwt >= 0.7.2 && < 0.8
                     , hasql >= 0.19
                     , either
                     , stm-containers
                     , stm
                     , retry
                     , stringsearch
                     , time
                     , contravariant
  default-language:    Haskell2010
  default-extensions: OverloadedStrings, NoImplicitPrelude, LambdaCase

executable postgrest-ws
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Config
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.4 && < 0.6
                     , hasql >= 0.19
                     , hasql-pool >= 0.4
                     , warp >= 3.2 && < 4
                     , postgrest-ws
                     , protolude >= 0.2
                     , base64-bytestring
                     , bytestring
                     , configurator
                     , optparse-applicative
                     , text
                     , time
                     , wai
                     , wai-extra
                     , wai-app-static
                     , heredoc
                     , ansi-wl-pprint
  default-language:    Haskell2010
  default-extensions: OverloadedStrings, NoImplicitPrelude, QuasiQuotes

test-suite postgrest-ws-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BroadcastSpec
                     , ClaimsSpec
                     , DatabaseSpec
                     , HasqlBroadcastSpec
  build-depends:       base
                     , protolude >= 0.2
                     , postgrest-ws
                     , containers
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , hasql
                     , hasql-pool
                     , http-types
                     , unordered-containers >= 0.2
                     , wai-extra
                     , stm
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions: OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/diogob/postgrest-ws
